Diversify project categories and add new projects
- Reorganize from 3 categories to 9 (Islamic, Education, Tech,
  Services, E-commerce, Real Estate, Legal, Industry, Creative)
- Add 3 new projects: Thiqa Arabia, Raed Al-Istiqdam, Reem Jewelz
- Total projects: 34

--- a/projects.json
+++ b/projects.json
@@ -162,120 +162,147 @@
     "link": "https://3lameni.com"
   },
   {
-    "category": "Business",
+    "category": "Services",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "info",
+    "label": "SVC",
     "message": "<strong>Miamin</strong>",
     "meta": "Business services<br>Link: <a href='https://miamin.com.sa' target='_blank'>miamin.com.sa</a>",
     "link": "https://miamin.com.sa"
   },
   {
-    "category": "Business",
+    "category": "E-commerce",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "success",
+    "label": "SHOP",
     "message": "<strong>Derm Medical</strong>",
-    "meta": "Medical services<br>Link: <a href='https://dermmedical-sa.com' target='_blank'>dermmedical-sa.com</a>",
+    "meta": "Medical e-commerce<br>Link: <a href='https://dermmedical-sa.com' target='_blank'>dermmedical-sa.com</a>",
     "link": "https://dermmedical-sa.com"
   },
   {
-    "category": "Business",
+    "category": "E-commerce",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "success",
+    "label": "SHOP",
     "message": "<strong>Jirabe</strong>",
     "meta": "E-commerce<br>Link: <a href='https://jirabe.com' target='_blank'>jirabe.com</a>",
     "link": "https://jirabe.com"
   },
   {
-    "category": "Business",
+    "category": "Tech",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "info",
+    "label": "TECH",
     "message": "<strong>Markoum Apps</strong>",
     "meta": "App hub<br>Link: <a href='https://apps.markoum.com' target='_blank'>apps.markoum.com</a>",
     "link": "https://apps.markoum.com"
   },
   {
-    "category": "Business",
+    "category": "Tech",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "info",
+    "label": "TECH",
     "message": "<strong>Markoum AI Platform</strong>",
     "meta": "AI Content Analysis & Prompting<br>Link: <a href='https://apps.markoum.com/ar' target='_blank'>apps.markoum.com/ar</a>",
     "link": "https://apps.markoum.com/ar"
   },
   {
-    "category": "Business",
+    "category": "Tech",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "info",
+    "label": "TECH",
     "message": "<strong>Chat and Decide</strong>",
     "meta": "Decision platform<br>Link: <a href='https://chatanddecide.com' target='_blank'>chatanddecide.com</a>",
     "link": "https://chatanddecide.com"
   },
   {
-    "category": "Business",
+    "category": "Real Estate",
     "timestamp": "[LIVE]",
     "level": "warn",
-    "label": "BIZ",
+    "label": "REAL",
     "message": "<strong>Ejary Online</strong>",
     "meta": "Rental services<br>Link: <a href='https://ejaryonline.com' target='_blank'>ejaryonline.com</a>",
     "link": "https://ejaryonline.com"
   },
   {
-    "category": "Business",
+    "category": "Legal",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "error",
+    "label": "LAW",
     "message": "<strong>Mythaq</strong>",
     "meta": "Legal services<br>Link: <a href='https://mythaq.net' target='_blank'>mythaq.net</a>",
     "link": "https://mythaq.net"
   },
   {
-    "category": "Business",
+    "category": "Creative",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "success",
+    "label": "ART",
     "message": "<strong>Noor Gallery</strong>",
     "meta": "Art gallery<br>Link: <a href='https://noor.gallery' target='_blank'>noor.gallery</a>",
     "link": "https://noor.gallery"
   },
   {
-    "category": "Business",
+    "category": "Real Estate",
     "timestamp": "[LIVE]",
     "level": "warn",
-    "label": "BIZ",
+    "label": "REAL",
     "message": "<strong>Ajmal Bustan</strong>",
     "meta": "Real estate/Garden<br>Link: <a href='https://ajmalbustan.com' target='_blank'>ajmalbustan.com</a>",
     "link": "https://ajmalbustan.com"
   },
   {
-    "category": "Business",
+    "category": "Industry",
     "timestamp": "[LIVE]",
     "level": "warn",
-    "label": "BIZ",
+    "label": "IND",
     "message": "<strong>Starpack Egypt</strong>",
     "meta": "Packaging solutions<br>Link: <a href='https://starpack-eg.net' target='_blank'>starpack-eg.net</a>",
     "link": "https://starpack-eg.net"
   },
   {
-    "category": "Business",
+    "category": "Services",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "info",
+    "label": "SVC",
     "message": "<strong>Sahm Alryadh</strong>",
     "meta": "Business services<br>Link: <a href='https://sahmalryadh.com' target='_blank'>sahmalryadh.com</a>",
     "link": "https://sahmalryadh.com"
   },
   {
-    "category": "Business",
+    "category": "Services",
     "timestamp": "[LIVE]",
-    "level": "warn",
-    "label": "BIZ",
+    "level": "info",
+    "label": "SVC",
     "message": "<strong>3rd Mil</strong>",
     "meta": "Business services<br>Link: <a href='https://3rd-mil.com' target='_blank'>3rd-mil.com</a>",
     "link": "https://3rd-mil.com"
+  },
+  {
+    "category": "Services",
+    "timestamp": "[LIVE]",
+    "level": "info",
+    "label": "SVC",
+    "message": "<strong>Thiqa Arabia</strong>",
+    "meta": "Verification services<br>Link: <a href='https://trustksaa.com' target='_blank'>trustksaa.com</a>",
+    "link": "https://trustksaa.com"
+  },
+  {
+    "category": "Services",
+    "timestamp": "[LIVE]",
+    "level": "info",
+    "label": "SVC",
+    "message": "<strong>Raed Al-Istiqdam</strong>",
+    "meta": "Recruitment company<br>Link: <a href='https://raedalaistiqdam.com' target='_blank'>raedalaistiqdam.com</a>",
+    "link": "https://raedalaistiqdam.com"
+  },
+  {
+    "category": "E-commerce",
+    "timestamp": "[LIVE]",
+    "level": "success",
+    "label": "SHOP",
+    "message": "<strong>Reem Jewelz</strong>",
+    "meta": "Jewelry store<br>Link: <a href='https://reemjewelz.com.sa' target='_blank'>reemjewelz.com.sa</a>",
+    "link": "https://reemjewelz.com.sa"
   }
 ]
